<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myinstagram.Settings"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame"
    android:padding="5dp" >

   <TextView android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/remoteip"
   	   android:layout_gravity="center"
   	   android:textSize="20sp"/>
   <EditText android:id="@+id/remoteip" 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/remoteiphint"
       android:layout_gravity="center"
       android:textAlignment="center"
       android:textSize="20sp"/>
   <TextView android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/remoteport"
       android:layout_gravity="center"
       android:textSize="20sp"/>
   <EditText android:id="@+id/remoteport"  
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/remoteporthint"
       android:layout_gravity="center"
       android:textSize="20sp"
       android:inputType="number"
       android:textAlignment="center"/>
   <Button android:id="@+id/save"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/save"
       android:layout_gravity="center"/>
   
</LinearLayout>