<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maincontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myinstagram.SelectImage">
	
    <com.example.myinstagram.DrawView
        android:layout_margin="3dp"
        android:id="@+id/editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:contentDescription="@string/imageDesc"
        android:layout_centerInParent="true"
        android:src="@drawable/abc_ab_stacked_solid_dark_holo"
        android:background="@drawable/abc_ab_solid_dark_holo" />
    
    <LinearLayout android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
		<Button android:id="@+id/reset"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_margin="1dp"
		        android:text="@string/reset"
		        android:textSize="15sp"
		        android:layout_weight="1"
		        style="?android:attr/buttonBarButtonStyle"
		        android:background="#0000ff"
		        android:textColor="@android:color/white"
		        android:alpha="0.5"/>
		<Button android:id="@+id/choose"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_margin="1dp"
		        android:text="@string/choose"
		        android:textSize="15sp"
		        android:layout_weight="1"
		        style="?android:attr/buttonBarButtonStyle"
		        android:background="#0000ff"
		        android:textColor="@android:color/white"
		        android:alpha="0.5"/>
		<Button android:id="@+id/gallery"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_margin="1dp"
		        android:text="@string/gallery"
		        android:textSize="15sp"
		        android:layout_weight="1"
		        style="?android:attr/buttonBarButtonStyle"
		        android:background="#0000ff"
		        android:textColor="@android:color/white"
		        android:alpha="0.5"/>
		<Button android:id="@+id/clear"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_margin="1dp"
		        android:text="@string/clear"
		        android:textSize="15sp"
		        android:layout_weight="1"
		        style="?android:attr/buttonBarButtonStyle"
		        android:background="#0000ff"
		        android:textColor="@android:color/white"
		        android:alpha="0.5"/>
		<Button android:id="@+id/process"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_margin="1dp"
		        android:text="@string/process"
		        android:textSize="15sp"
		        android:layout_weight="1"
		        style="?android:attr/buttonBarButtonStyle"
		        android:background="#0000ff"
		        android:textColor="@android:color/white"
		        android:alpha="0.5"/>
		<Button android:id="@+id/dummy"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
		    android:layout_weight="0"
		    style="?android:attr/buttonBarButtonStyle"/>
		
	</LinearLayout>
	<Spinner android:id="@+id/effect"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/options"
	    android:layout_margin="10dp"
	    android:spinnerMode="dialog"
	    android:background="@drawable/abc_ab_bottom_solid_dark_holo"/>
    
</RelativeLayout>
